Fix transitions which were broken in previous commit

--- a/content/skin/scicalc.css
+++ b/content/skin/scicalc.css
@@ -2,13 +2,14 @@
 
 /** general styles for toolbar panel **/
 #scicalc-container {
-	min-width: 28px; /* do not collapse when exchanging buttons during -moz-transition */
+	min-width: 28px; /* do not collapse when exchanging buttons during transition */
 }
 
 #scicalc-input {
 	height: 22px;
-	width: 250px;
-	-moz-transition: width .3s;
+	width: 1000px;
+	max-width: 1000px;
+	-moz-transition: max-width .3s, width .3s;
 }
 
 .scicalc-icon {
@@ -54,9 +55,9 @@
 }
 
 #scicalc-container.collapsible.collapsed > #scicalc-input {
-	width: 21px;
+	max-width: 21px;
 	visibility: collapse;
-	-moz-transition: width .3s, visibility .3s;
+	-moz-transition: max-width .3s, visibility .3s;
 }
 
 #scicalc-container.collapsible.collapsed > #scicalc-button {
@@ -70,7 +71,8 @@
 
 /** customizations for PanelUI toolbar panel **/
 #scicalc-container[cui-areatype="menu-panel"] #scicalc-input  {
-	width: 262px !important;
+	min-width: 262px;
+	max-width: 262px !important;
 	visibility: visible !important;
 }
 
@@ -84,7 +86,8 @@
 
 /** customization for customization mode **/
 toolbarpaletteitem[place="palette"]	#scicalc-input {
-	width: 5em !important;
+	min-width: 5em;
+	max-width: 5em !important;
 	visibility: visible !important;
 }
 
